<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Jarvis</string>
    <string name="action_settings">Settings</string>
    <string-array name="menus_array">
        <item>Jarvis</item>
        <item>Profil</item>
        <item>Network</item>
        <item>Apps</item>
    </string-array>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="network_description">Network information to connect Jarvis :</string>
    <string name="ip">IP :</string>
    <string name="port">Port :</string>
    <string name="validate_network">Connection</string>
    <string name="apps_description">Connected applications :</string>
    <string name="profil_description">Your preferences :</string>
    <string name="pseudo">Pseudo :</string>
    <string name="langue">Language :</string>
    <string-array name="languages">
        <item>Francais</item>
        <item>Anglais</item>
    </string-array>
</resources>
